feat(project): add get-tasks-by-project and get-my-projects APIs
Signed-off-by: sonhoang2 <naruto3285@gmail.com>